# ae3-sdk

./: .gitignore  LICENSE  Makefile  NOTICE.md  README.md
.github/workflows/: ci-core.yml  ci-extract.yml  ci-tools.yml  ci-wasm.yml
core/: Makefile  README.md  ae3synth.h  bank.c  cue.c  exst.c  gauss.c  internal.h  pitch.c  reverb.c  se.c  seq.c  synth.c  voice.c  vol.c
docs/formats/: BGM.md  DATA_BIN.md  EXST.md  EXTRACTION.md  FMV.md  I3D.md  SE.md
extract-web/: README.md  package-lock.json  package.json  tsconfig.json
extract-web/src/: bytes.ts  exdb.ts  fmv.ts  index.ts  iso9660.ts  manifest.ts  opfs.ts  pck.ts  source.ts  sz.ts  vfi.ts
extract-web/test/: cli.test.mjs  extract.test.mjs  fixtures.mjs
harness/: Makefile  README.md  bgmplay.c  exstdump.c  serender.c  wavdump.c
tests/: golden.sha256  make_vectors.py  run_vectors.py
tests/vectors/: adsr_edges.mid  bend.mid  cue.mid  drum_kit.mid  lfo.mid  loop_seam.mid  reverb_flag.mid  vec.bd  vec.hd  vec_mono.x  vec_se.hd  vec_se_inf.hd  vec_stereo.x  vlfo.hd
tools/: README.md  pyproject.toml
tools/ae3tools/: __init__.py  bgm_songvol.py  cli.py  databin_scan.py  exdb.py  exst.py  fmv2mp4.py  i3c.py  i3d.py  i3dgltf.py  i3dmesh.py  i3drender.py  i3manim.py  sbt2srt.py  se.py  strextract.py  tm2.py  vfiextract.py  vfiparse.py
wasm/: Makefile  README.md  abi.c  package.json
wasm/js/: ae3synth.mjs  wav.mjs
wasm/test/: render.mjs  run_vectors.mjs  wav.mjs
