[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ae3tools"
version = "0.1.0"
description = "Desktop toolkit for Ape Escape 3 (PS2) data: DATA.BIN extraction, Exdb tables, I3D models/animations, FMV. Ships no game data."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.optional-dependencies]
images = ["Pillow"]

[project.scripts]
ae3 = "ae3tools.cli:main"

[tool.setuptools]
packages = ["ae3tools"]
